# dll_to_exe

./: .appveyor.yml  CMakeLists.txt  README.md
dll_to_exe/: CMakeLists.txt  main.cpp  pe_handler.cpp  pe_handler.h
tests/: CMakeLists.txt
tests/test_case1/: CMakeLists.txt  main.cpp
